# shilling

./: LICENSE  README.md  pyproject.toml
src/: shilling.py
src/shilling/: __init__.py
