[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "shilling"
version = "0.0.2"
authors = [
  { name="Calum Galleitch", email="calum@callingthetune.co.uk" },
]
description = "Brewing calculations lib"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/u38cg/shilling"
Issues = "https://github.com/u38cg/shilling/issues"